# Renderer3D

./: .gitignore  CMakeLists.txt  README.md  main.cpp
bitmap/: Bitmap.cpp  Bitmap.h  CMakeLists.txt
context/: CMakeLists.txt  Camera.cpp  Camera.h  Display.cpp  Display.h  Edge.cpp  Edge.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Point.cpp  Point.h  Quaternion.cpp  Quaternion.h  Vector4D.cpp  Vector4D.h
util/: CMakeLists.txt  Interpolator.cpp  Interpolator.h  Obj.cpp  Obj.h
